Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121030

QIconLoader failed to find icon in hicolor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.6.2, 6.7.0 Beta2, 6.8.0 FF
    • 6.6.1, 6.6
    • GUI: Other
    • None
    • deepin / chrome 120.0.6099.129
    • Linux/X11
    • 0534a93ef (dev), 7b38b5e36 (6.7), 79e5cc7e1 (6.6)

      1. use chrome create a shorcut of website(chrome–menu–more tools–create shortcut)
      2. desktop file path `~/.local/share/applications/chrome-fldmbijiogoemfecifgkfeoadboaboni-Profile_12.desktop`
      3.  icon path `/home/mike/.local/share/icons/hicolor/16x16/apps`
      4. QIcon::fromTheme("chrome-fldmbijiogoemfecifgkfeoadboaboni-Profile_12") got  iconName `chrome`  with path  `/usr/share/icons/Papirus/96x96/apps/chrome.svg`

       

      Because libqtxdg adapts to Qt6 and is still on ` WIP` , xdgiconloader cannot be used to find icons in Qt6, and `QIconLoader` in Qt6 is already doing these things. But It  dashfallbacks in advance when searching for icons before searching for the complete iconname in hicolor.

      https://github.com/lxqt/libqtxdg/pull/261 has fixed this issue

        For Gerrit Dashboard: QTBUG-121030
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            mike_chen mike chen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes